--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,55 +7,73 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "webpack-defaults": "webpack-defaults"
   },
   "dependencies": {
-    "@types/d3": "^5.7.2",
-    "@types/jquery": "^3.5.1",
-    "@types/lodash": "^4.14.159",
+    "@hapi/bourne": "^2.0.0",
+    "@mapbox/node-pre-gyp": "^1.0.2",
+    "@types/d3": "^5.16.4",
+    "@types/jquery": "^3.5.5",
+    "@types/lodash": "^4.14.168",
     "@types/nprogress": "^0.2.0",
     "@vue/cli": "^3.12.1",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.6.0",
     "brunch": "^2.10.17",
-    "cairo": "0.1.0-alpha.3",
-    "canvas": "^2.6.1",
-    "core-js": "^2.6.11",
+    "bundle-buddy-webpack-plugin": "^0.3.0",
+    "cairo": "^0.1.0-alpha.3",
+    "call-bind": "^1.0.2",
+    "canvas": "^2.7.0",
+    "cli-service": "^0.0.2",
+    "core-js": "^2.6.12",
     "d3": "^5.16.0",
-    "jquery": "^3.5.1",
-    "lodash": "^4.17.20",
+    "get-intrinsic": "^1.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "htmlparser2": "^3.10.1",
+    "is-core-module": "^2.2.0",
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "^1.4.0",
+    "n": "^7.1.0",
+    "node-pre-gyp": "^0.17.0",
     "nprogress": "^0.2.0",
-    "query-string": "^6.13.1",
+    "nyan-progress-webpack-plugin": "^1.2.0",
+    "popper.js": "^1.16.1",
+    "pretty-error": "^2.1.2",
+    "query-string": "^6.14.1",
     "quill": "^1.3.7",
+    "renderkid": "^2.0.5",
     "shards-vue": "^1.0.4",
     "svgsaver": "^0.9.0",
-    "vega": "^5.14.0",
+    "vega": "^5.20.2",
     "vega-embed": "^4.2.5",
     "vega-lite": "^3.4.0",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.5",
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
     "vue-multiselect": "^2.1.6",
     "vue-property-decorator": "^8.5.1",
-    "vue-router": "^3.4.3",
+    "vue-router": "^3.5.1",
     "vue-spinners": "^1.0.2",
     "vue-vega": "^1.0.0-alpha.13",
-    "vuex": "^3.5.1",
-    "vuex-persistedstate": "^2.7.1"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^2.7.1",
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.12",
+    "@types/chai": "^4.2.15",
     "@types/mocha": "^5.2.4",
     "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-typescript": "^3.12.1",
     "@vue/cli-plugin-unit-mocha": "^3.12.1",
     "@vue/cli-service": "^3.12.1",
     "@vue/test-utils": "1.0.0-beta.29",
-    "chai": "^4.1.2",
-    "sass": "^1.26.10",
+    "chai": "^4.3.4",
+    "sass": "^1.32.8",
     "sass-loader": "^7.3.1",
-    "style-resources-loader": "^1.3.3",
+    "style-resources-loader": "^1.4.1",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
-    "typescript": "^3.9.7",
-    "vue-template-compiler": "^2.6.11"
+    "typescript": "^3.9.9",
+    "vue-template-compiler": "^2.6.12"
   }
 }
